Added headers3 to POST /sc/ask + added a run script for local KE

--- a/shared_data/Monitor.ipynb
+++ b/shared_data/Monitor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# importing libraries\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# function for pretty printing JSON\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# set the URL\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# GET request /sc - Either get all available Smart Connectors or a specific one if the Knowledge-Base-Id is provided.\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "# GET request /sc/ki - Get all KnowledgeInteractions for a given Knowledge-Base-Id\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -228,9 +228,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "outputs": [],
-   "source": [],
+   "source": [
+    "# POST request /sc/ask - Execute the given Ask Knowledge Interaction with the given binding set. It is possible to target this ask to a specific Knowledge Base by including a RecipientSelector in the requestBody.\n",
+    "headers3 = {\n",
+    "'accept': 'application/json; charset=UTF-8',\n",
+    "'Knowledge-Base-Id': '0',\n",
+    "'Knowledge-Interaction-Id': '1',\n",
+    "'Content-Type': 'application/json; charset=UTF-8',\n",
+    "}\n",
+    "data = {\n",
+    "    \"p\": \"<http://www.tno.nl/s1>\",\n",
+    "    \"q\": \"<http://www.tno.nl/p1>\",\n",
+    "    \"r\": \"<http://www.tno.nl/o1>\"\n",
+    "  }\n"
+   ],
    "metadata": {
     "collapsed": false
    }
