added new nb to mimic a lamp that is also jupyter_kernel_gateway api

--- a/shared_data/Monitor.ipynb
+++ b/shared_data/Monitor.ipynb
@@ -234,16 +234,125 @@
     "# POST request /sc/ask - Execute the given Ask Knowledge Interaction with the given binding set. It is possible to target this ask to a specific Knowledge Base by including a RecipientSelector in the requestBody.\n",
     "headers3 = {\n",
     "'accept': 'application/json; charset=UTF-8',\n",
-    "'Knowledge-Base-Id': '0',\n",
-    "'Knowledge-Interaction-Id': '1',\n",
-    "'Content-Type': 'application/json; charset=UTF-8',\n",
+    "'Knowledge-Base-Id': 'https://ke.interconnectproject.eu/adapter/evtd-kb',\n",
+    "'Knowledge-Interaction-Id': 'https://ke.interconnectproject.eu/adapter/evtd-kb/interaction/evtd-tx-data',\n",
     "}\n",
-    "data = {\n",
-    "    \"p\": \"<http://www.tno.nl/s1>\",\n",
-    "    \"q\": \"<http://www.tno.nl/p1>\",\n",
-    "    \"r\": \"<http://www.tno.nl/o1>\"\n",
-    "  }\n"
+    "# data = {\n",
+    "#     \"bindingSet\":\n",
+    "#         '''?dp <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://ontology.tno.nl/interconnect/datapoint#DataPoint> .\n",
+    "# ?dp <http://ontology.tno.nl/interconnect/topology#hasToplogicalAssociation> ?sid .\n",
+    "# ?sid <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://saref.etsi.org/saref4auto/Identifier> .\n",
+    "# ?dp <http://ontology.tno.nl/interconnect/datapoint#hasEffectivePeriod> ?st .\n",
+    "# ?st <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www.w3.org/2006/time#Interval> .\n",
+    "# ?st <https://saref.etsi.org/core/hasBeginning> ?bst .\n",
+    "# ?bst <http://www.w3.org/2006/time#inXSDDateTimeStamp> ?startTime .\n",
+    "# ?dp <http://ontology.tno.nl/interconnect/datapoint#hasEffectivePeriod> ?et .\n",
+    "# ?et <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www.w3.org/2006/time#Interval> .\n",
+    "# ?et <https://saref.etsi.org/core/hasBeginning> ?eet .\n",
+    "# ?eet <http://www.w3.org/2006/time#inXSDDateTimeStamp> ?endTime .\n",
+    "# ?dp <http://www.ontology-of-units-of-measure.org/resource/om-2/hasValue> ?fr .\n",
+    "# ?fr <http://www.ontology-of-units-of-measure.org/resource/om-2/hasNumericalValue> ?firstResult .\n",
+    "# ?dp <http://www.ontology-of-units-of-measure.org/resource/om-2/hasValue> ?ps .''',\n",
+    "#  }\n",
+    "# data = {\"bindingSet\": json.loads(r.text)[0]['argumetGraphPattern']}\n",
+    "\n"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [],
+   "source": [
+    "ki1 = json.loads(r.text)[0]\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'?dp <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://ontology.tno.nl/interconnect/datapoint#DataPoint> . ?dp <http://ontology.tno.nl/interconnect/device#hasConnectionID> ?tid . ?dp <http://www.ontology-of-units-of-measure.org/resource/om-2/hasValue> ?fr . ?fr <http://www.ontology-of-units-of-measure.org/resource/om-2/hasNumericalValue> ?firstResult . ?dp <http://www.ontology-of-units-of-measure.org/resource/om-2/hasValue> ?ps . ?ps <http://www.ontology-of-units-of-measure.org/resource/om-2/hasNumericalValue> ?pageSize . '"
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ki1['argumentGraphPattern']"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [],
+   "source": [
+    "from rdflib import Graph\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'bindingSet': '?dp <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://ontology.tno.nl/interconnect/datapoint#DataPoint> . ?dp <http://ontology.tno.nl/interconnect/device#hasConnectionID> ?tid . ?dp <http://www.ontology-of-units-of-measure.org/resource/om-2/hasValue> ?fr . ?fr <http://www.ontology-of-units-of-measure.org/resource/om-2/hasNumericalValue> ?firstResult . ?dp <http://www.ontology-of-units-of-measure.org/resource/om-2/hasValue> ?ps . ?ps <http://www.ontology-of-units-of-measure.org/resource/om-2/hasNumericalValue> ?pageSize . '}"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = {\n",
+    "    'bindingSet': ki1['argumentGraphPattern']\n",
+    "}\n",
+    "data"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<Response [415 Unsupported Media Type]>"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r = httpx.post(URL + \"sc/ask\", headers=headers3, data=data)\n",
+    "r"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
