--- a/shared_data/NewKB.ipynb
+++ b/shared_data/NewKB.ipynb
@@ -47,12 +47,11 @@
    "source": [
     "# GET /lamp\n",
     "req = json.loads(REQUEST)\n",
-    "def lamp_status():\n",
-    "    if status == \"off\":\n",
-    "        power_consumption = 0\n",
-    "    else:\n",
-    "        power_consumption = random.randint(0, 10)\n",
-    "    print(json.dumps({\"DeviceID\":DEVICE_ID,\"status\": status, \"power_consumption\": power_consumption}))\n"
+    "if status == \"off\":\n",
+    "    power_consumption = 0\n",
+    "else:\n",
+    "    power_consumption = random.randint(0, 10)\n",
+    "print(json.dumps({\"DeviceID\":DEVICE_ID,\"status\": status, \"power_consumption\": power_consumption}))\n"
    ],
    "metadata": {
     "collapsed": false
@@ -64,12 +63,11 @@
    "outputs": [],
    "source": [
     "# GET /lamp/power_consumption\n",
-    "def power_consumption():\n",
-    "    if status == \"off\":\n",
-    "        power_consumption = 0\n",
-    "    else:\n",
-    "        power_consumption = random.randint(0, 10)\n",
-    "    print(json.dumps({\"DeviceID\":DEVICE_ID,\"power_consumption\": power_consumption}))\n"
+    "if status == \"off\":\n",
+    "    power_consumption = 0\n",
+    "else:\n",
+    "    power_consumption = random.randint(0, 10)\n",
+    "print(json.dumps({\"DeviceID\":DEVICE_ID,\"power_consumption\": power_consumption}))\n"
    ],
    "metadata": {
     "collapsed": false
@@ -81,12 +79,11 @@
    "outputs": [],
    "source": [
     "# GET /lamp/toggle\n",
-    "def toggle_lamp():\n",
-    "    if status == \"on\":\n",
-    "        status = \"off\"\n",
-    "    else:\n",
-    "        status = \"on\"\n",
-    "    print(json.dumps({\"DeviceID\":DEVICE_ID,\"status\": status}))"
+    "if status == \"on\":\n",
+    "    status = \"off\"\n",
+    "else:\n",
+    "    status = \"on\"\n",
+    "print(json.dumps({\"DeviceID\":DEVICE_ID,\"status\": status}))"
    ],
    "metadata": {
     "collapsed": false
@@ -94,13 +91,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[KernelGatewayApp] Kernel started: e2f61985-5fa0-415f-b8d1-d96d5b783e53, name: python3\r\n",
+      "[KernelGatewayApp] Kernel started: 0d29bcad-3052-4edc-b7b6-b78c4b392bab, name: python3\r\n",
       "^C\r\n",
       "Traceback (most recent call last):\r\n",
       "  File \"/home/matt/.local/bin/jupyter-kernelgateway\", line 8, in <module>\r\n",
@@ -156,7 +153,7 @@
     }
    ],
    "source": [
-    "!jupyter kernelgateway --KernelGatewayApp.api='kernel_gateway.notebook_http' --KernelGatewayApp.seed_uri='NewKB.ipynb' --KernelGatewayApp.ip=\"loclahost\""
+    "!jupyter kernelgateway --KernelGatewayApp.api='kernel_gateway.notebook_http' --KernelGatewayApp.seed_uri='NewKB.ipynb' --KernelGatewayApp.ip=\"127.0.0.1\""
    ],
    "metadata": {
     "collapsed": false
