fixed lamp api again fo real i promiseee

--- a/shared_data/NewKB.ipynb
+++ b/shared_data/NewKB.ipynb
@@ -132,37 +132,11 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# GET /lamp/DEVICE_ID\n",
-    "print(json.dumps({\"DeviceID\":DEVICE_ID}))\n"
+    "\n",
+    "!jupyter kernelgateway --api='kernel_gateway.notebook_http' \\\n",
+    "    --seed_uri='/home/matt/Dev/BSCProject/jupyterhub-deploy-docker/shared_data/NewKB.ipynb' \\\n",
+    "    --port 8889\n"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[KernelGatewayApp] Kernel started: 714f90f2-2d06-4651-a82f-9deb4e33d540, name: python3\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!jupyter kernelgateway --KernelGatewayApp.api='kernel_gateway.notebook_http' --KernelGatewayApp.seed_uri='NewKB.ipynb'"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
