stuck with jupyer kernel gateway and transforming lamp api into fast api in jnb

--- a/shared_data/LampAPI.ipynb
+++ b/shared_data/LampAPI.ipynb
@@ -134,9 +134,18 @@
    "source": [
     "\n",
     "!jupyter kernelgateway --api='kernel_gateway.notebook_http' \\\n",
-    "    --seed_uri='/home/matt/Dev/BSCProject/jupyterhub-deploy-docker/shared_data/NewKB.ipynb' \\\n",
+    "    --seed_uri='/home/matt/Dev/BSCProject/jupyterhub-deploy-docker/shared_data/LampAPI.ipynb' \\\n",
     "    --port 8889\n"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
