added GET /lamp to LampFastAPI

--- a/shared_data/LampFastAPI.ipynb
+++ b/shared_data/LampFastAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "# defining some variables\n",
@@ -37,12 +37,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "@app.get(\"/\")\n",
     "async def root():\n",
-    "    return {\"message\": \"Hello World\"}"
+    "    return {\"message\": \"welcome to Lamp API\"}"
    ],
    "metadata": {
     "collapsed": false
@@ -50,7 +50,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
+   "outputs": [],
+   "source": [
+    "# GET request to get all the information about the lamp\n",
+    "@app.get(\"/lamp\")\n",
+    "async def get_lamp():\n",
+    "    if status == \"on\":\n",
+    "        power_consumption = random.randint(1, 100)\n",
+    "    else:\n",
+    "        power_consumption = 0\n",
+    "    return {\n",
+    "        \"device_id\": DEVICE_ID,\n",
+    "        \"status\": status,\n",
+    "        \"power_consumption\": power_consumption\n",
+    "    }"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stderr",
@@ -66,8 +88,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:55082 - \"GET / HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:42566 - \"GET / HTTP/1.1\" 200 OK\n"
+      "INFO:     127.0.0.1:49530 - \"GET / HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:49534 - \"GET /lamp HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:60204 - \"GET /lamp HTTP/1.1\" 200 OK\n"
      ]
     },
     {
@@ -93,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "outputs": [],
    "source": [],
    "metadata": {
