created all endpoints for LampFastAPI.ipynb

--- a/shared_data/LampFastAPI.ipynb
+++ b/shared_data/LampFastAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "outputs": [],
    "source": [
     "# defining some variables\n",
@@ -29,7 +29,10 @@
     "global DEVICE_ID\n",
     "DEVICE_ID = \"Lamp_1\"\n",
     "status = \"off\"\n",
-    "power_consumption = 0"
+    "if status == \"on\":\n",
+    "    power_consumption = random.randint(1, 100)\n",
+    "else:\n",
+    "    power_consumption = 0"
    ],
    "metadata": {
     "collapsed": false
@@ -37,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
    "outputs": [],
    "source": [
     "@app.get(\"/\")\n",
@@ -50,16 +53,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "outputs": [],
    "source": [
     "# GET request to get all the information about the lamp\n",
     "@app.get(\"/lamp\")\n",
     "async def get_lamp():\n",
-    "    if status == \"on\":\n",
-    "        power_consumption = random.randint(1, 100)\n",
-    "    else:\n",
-    "        power_consumption = 0\n",
     "    return {\n",
     "        \"device_id\": DEVICE_ID,\n",
     "        \"status\": status,\n",
@@ -72,7 +71,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
+   "outputs": [],
+   "source": [
+    "# GET request to get the status of the lamp\n",
+    "@app.get(\"/lamp/status\")\n",
+    "async def get_status():\n",
+    "    return {\"DeviceID\":DEVICE_ID, \"status\": status}"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "outputs": [],
+   "source": [
+    "# GET request to get the power consumption of the lamp\n",
+    "@app.get(\"/lamp/power_consumption\")\n",
+    "async def get_power_consumption():\n",
+    "    return {\"DeviceID\":DEVICE_ID, \"power_consumption\": power_consumption}"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "outputs": [],
+   "source": [
+    "# GET request to toggle the status of the lamp\n",
+    "@app.get(\"/lamp/toggle\")\n",
+    "async def toggle():\n",
+    "    global status\n",
+    "    if status == \"on\":\n",
+    "        status = \"off\"\n",
+    "    else:\n",
+    "        status = \"on\"\n",
+    "    return {\"DeviceID\":DEVICE_ID, \"status\": status}"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "outputs": [],
+   "source": [
+    "# POST request to change the status of the lamp\n",
+    "@app.post(\"/lamp/status/{new_status}\")\n",
+    "async def post_status(new_status: str):\n",
+    "    # validating the new status\n",
+    "    if new_status not in [\"on\", \"off\"]:\n",
+    "        return {\"error\": \"invalid status\"}\n",
+    "    status = new_status\n",
+    "    return {\"DeviceID\":DEVICE_ID, \"status\": status}"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "outputs": [],
+   "source": [
+    "# GET request to get the device ID of the lamp\n",
+    "@app.get(\"/lamp/device_id\")\n",
+    "async def get_device_id():\n",
+    "    return {\"DeviceID\":DEVICE_ID}"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "outputs": [
     {
      "name": "stderr",
@@ -88,9 +166,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:49530 - \"GET / HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:49534 - \"GET /lamp HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:60204 - \"GET /lamp HTTP/1.1\" 200 OK\n"
+      "INFO:     127.0.0.1:45714 - \"GET /lamp/toggle HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:45714 - \"GET /lamp/toggle HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:45714 - \"GET /lamp/toggle HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:45714 - \"GET /lamp/toggle HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:33066 - \"GET /lamp/status HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:33066 - \"GET /lamp/status HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:33066 - \"GET /lamp/status HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:35962 - \"GET /lamp/status/ple HTTP/1.1\" 405 Method Not Allowed\n",
+      "INFO:     127.0.0.1:48060 - \"GET /lamp/status/on HTTP/1.1\" 405 Method Not Allowed\n",
+      "INFO:     127.0.0.1:58064 - \"GET /lamp/status/on HTTP/1.1\" 405 Method Not Allowed\n",
+      "INFO:     127.0.0.1:59120 - \"POST /lamp/status/on HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:52458 - \"POST /lamp/status/on HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:47806 - \"POST /lamp/status/off HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:41288 - \"POST /lamp/status/of HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:35216 - \"GET /lamp/status HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:35216 - \"GET /lamp/status HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:41326 - \"GET /lamp/device_id HTTP/1.1\" 200 OK\n"
      ]
     },
     {
@@ -116,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "outputs": [],
    "source": [],
    "metadata": {
