fixed endpoints endpoints for LampFastAPI.ipynb

--- a/shared_data/LampFastAPI.ipynb
+++ b/shared_data/LampFastAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 175,
    "metadata": {
     "collapsed": true
    },
@@ -21,18 +21,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 176,
    "outputs": [],
    "source": [
     "# defining some variables\n",
-    "global status\n",
     "global DEVICE_ID\n",
+    "global status\n",
     "DEVICE_ID = \"Lamp_1\"\n",
     "status = \"off\"\n",
-    "if status == \"on\":\n",
-    "    power_consumption = random.randint(1, 100)\n",
-    "else:\n",
-    "    power_consumption = 0"
+    "# function for returning a random power consumption value based on the status of the lamp\n",
+    "def calc_power_consumption(lamp_status):\n",
+    "    if lamp_status == \"on\":\n",
+    "        print(lamp_status)\n",
+    "        return random.randint(10, 100)\n",
+    "    else:\n",
+    "        return 0\n"
    ],
    "metadata": {
     "collapsed": false
@@ -40,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 177,
    "outputs": [],
    "source": [
     "@app.get(\"/\")\n",
@@ -53,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 178,
    "outputs": [],
    "source": [
     "# GET request to get all the information about the lamp\n",
@@ -62,7 +65,7 @@
     "    return {\n",
     "        \"device_id\": DEVICE_ID,\n",
     "        \"status\": status,\n",
-    "        \"power_consumption\": power_consumption\n",
+    "        \"power_consumption\": calc_power_consumption(status)\n",
     "    }"
    ],
    "metadata": {
@@ -71,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 179,
    "outputs": [],
    "source": [
     "# GET request to get the status of the lamp\n",
@@ -85,13 +88,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 180,
    "outputs": [],
    "source": [
     "# GET request to get the power consumption of the lamp\n",
     "@app.get(\"/lamp/power_consumption\")\n",
     "async def get_power_consumption():\n",
-    "    return {\"DeviceID\":DEVICE_ID, \"power_consumption\": power_consumption}"
+    "    return {\"DeviceID\":DEVICE_ID, \"power_consumption\": calc_power_consumption(status)}"
    ],
    "metadata": {
     "collapsed": false
@@ -99,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 181,
    "outputs": [],
    "source": [
     "# GET request to toggle the status of the lamp\n",
@@ -118,12 +121,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 182,
    "outputs": [],
    "source": [
     "# POST request to change the status of the lamp\n",
     "@app.post(\"/lamp/status/{new_status}\")\n",
     "async def post_status(new_status: str):\n",
+    "    global status\n",
     "    # validating the new status\n",
     "    if new_status not in [\"on\", \"off\"]:\n",
     "        return {\"error\": \"invalid status\"}\n",
@@ -136,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 183,
    "outputs": [],
    "source": [
     "# GET request to get the device ID of the lamp\n",
@@ -150,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 184,
    "outputs": [
     {
      "name": "stderr",
@@ -166,23 +170,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:45714 - \"GET /lamp/toggle HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:45714 - \"GET /lamp/toggle HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:45714 - \"GET /lamp/toggle HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:45714 - \"GET /lamp/toggle HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:33066 - \"GET /lamp/status HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:33066 - \"GET /lamp/status HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:33066 - \"GET /lamp/status HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:35962 - \"GET /lamp/status/ple HTTP/1.1\" 405 Method Not Allowed\n",
-      "INFO:     127.0.0.1:48060 - \"GET /lamp/status/on HTTP/1.1\" 405 Method Not Allowed\n",
-      "INFO:     127.0.0.1:58064 - \"GET /lamp/status/on HTTP/1.1\" 405 Method Not Allowed\n",
-      "INFO:     127.0.0.1:59120 - \"POST /lamp/status/on HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:52458 - \"POST /lamp/status/on HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:47806 - \"POST /lamp/status/off HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:41288 - \"POST /lamp/status/of HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:35216 - \"GET /lamp/status HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:35216 - \"GET /lamp/status HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:41326 - \"GET /lamp/device_id HTTP/1.1\" 200 OK\n"
+      "INFO:     127.0.0.1:41356 - \"GET /lamp HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:41356 - \"GET /lamp HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:41356 - \"GET /lamp HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:44902 - \"POST /lamp/status/on HTTP/1.1\" 200 OK\n",
+      "on\n",
+      "INFO:     127.0.0.1:48352 - \"GET /lamp HTTP/1.1\" 200 OK\n",
+      "on\n",
+      "INFO:     127.0.0.1:48352 - \"GET /lamp HTTP/1.1\" 200 OK\n",
+      "on\n",
+      "INFO:     127.0.0.1:48352 - \"GET /lamp HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:48364 - \"POST /lamp/status/on HTTP/1.1\" 200 OK\n",
+      "on\n",
+      "INFO:     127.0.0.1:48368 - \"GET /lamp HTTP/1.1\" 200 OK\n",
+      "on\n",
+      "INFO:     127.0.0.1:48368 - \"GET /lamp HTTP/1.1\" 200 OK\n",
+      "on\n",
+      "INFO:     127.0.0.1:42202 - \"GET /lamp HTTP/1.1\" 200 OK\n"
      ]
     },
     {
@@ -208,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 184,
    "outputs": [],
    "source": [],
    "metadata": {
