added thermostat class to ThermostatAPI.ipynb

--- a/shared_data/ThermostatAPI.ipynb
+++ b/shared_data/ThermostatAPI.ipynb
@@ -24,9 +24,40 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# defining some variables\n",
-    "global DEVICE_ID\n",
-    "DEVICE_ID = \"device_1\"\n"
+    "# Defining the thermostat class\n",
+    "class Thermostat:\n",
+    "    def __init__(self, name: str, temperature: int, humidity: int, mode: str):\n",
+    "        self.name = name\n",
+    "        self.temperature = temperature\n",
+    "        self.humidity = humidity\n",
+    "        self.mode = mode\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Thermostat {self.name} is set to {self.temperature} degrees and {self.humidity}% humidity in {self.mode} mode.\"\n",
+    "\n",
+    "    def set_temperature(self, temperature: int):\n",
+    "        self.temperature = temperature\n",
+    "\n",
+    "    def set_humidity(self, humidity: int):\n",
+    "        self.humidity = humidity\n",
+    "\n",
+    "    def set_mode(self, mode: str):\n",
+    "        self.mode = mode\n",
+    "\n",
+    "    def get_temperature(self):\n",
+    "        return self.temperature\n",
+    "\n",
+    "    def get_humidity(self):\n",
+    "        return self.humidity\n",
+    "\n",
+    "    def get_mode(self):\n",
+    "        return self.mode\n",
+    "\n",
+    "    def get_name(self):\n",
+    "        return self.name\n",
+    "\n",
+    "    def get_json(self):\n",
+    "        return json.dumps(self.__dict__)\n"
    ],
    "metadata": {
     "collapsed": false
